--- a/app/src/main/res/layout-v21/item_zone.xml
+++ b/app/src/main/res/layout-v21/item_zone.xml
@@ -6,8 +6,8 @@
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:clickable="true"
     android:layout_marginTop="8dp"
+    android:clickable="true"
     android:elevation="1dp"
     android:foreground="?android:attr/selectableItemBackgroundBorderless"
     android:orientation="horizontal"
@@ -23,69 +23,66 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/tv_question"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
                     android:text="中午吃鱼吗？"
                     android:textSize="18sp" />
+
+
+                <ImageView
+                    android:id="@+id/iv_love"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="16dp"
+                    android:src="@mipmap/like" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="8dp"
                     android:text="miao"
                     android:textColor="#c9c9c9"
                     android:textSize="12sp" />
-            </LinearLayout>
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/st_interest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="16dp" />
+            </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:background="#343434" />
 
-            <LinearLayout
+            <RadioGroup
+                android:id="@+id/rg_options"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/btn_eat"
-                    style="?attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="吃" />
-
-                <View
-                    android:layout_width="1px"
-                    android:layout_height="match_parent"
-                    android:background="#343434" />
-
-                <Button
-                    android:id="@+id/btn_uneat"
-                    style="?attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="吃" />
-            </LinearLayout>
+                android:orientation="horizontal" />
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/iv_love"
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:padding="8dp"
-            android:src="@mipmap/like" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
