--- a/app/src/main/res/layout/fragment2_mirror.xml
+++ b/app/src/main/res/layout/fragment2_mirror.xml
@@ -1,57 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <Button
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="320px"
-        style="?android:attr/borderlessButtonStyle"
-        android:text="魔镜会告诉你答案..."/>
+        android:text="魔镜会告诉你答案..." />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="标题"
         android:layout_marginLeft="80px"
         android:layout_marginTop="80px"
-        android:textSize="8sp"/>
+        android:text="标题"
+        android:textSize="8sp" />
+
     <EditText
+        android:id="@+id/et_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="160px"
-        android:layout_marginRight="160px"/>
-
+        android:layout_marginRight="160px" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="正面选项"
         android:layout_marginLeft="80px"
-        android:layout_marginTop="40px"
-        android:textSize="8sp"/>
-    <EditText
+        android:layout_marginTop="80px"
+        android:text="选项"
+        android:textSize="8sp" />
+
+    <ScrollView
+        android:id="@+id/ll_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="160px"
-        android:layout_marginRight="160px"/>
+        android:orientation="vertical">
 
-    <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/et_option1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="选项1" />
+
+                <Button
+                    android:id="@+id/btn_add1"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:text="+"
+                    android:textSize="18sp"
+                    android:visibility="invisible" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/et_option2"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="选项2" />
+
+                <Button
+                    android:id="@+id/btn_add2"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:text="+"
+                    android:textSize="18sp" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="对立选项"
-        android:layout_marginLeft="80px"
-        android:layout_marginTop="40px"
-        android:textSize="8sp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="160px"
-        android:layout_marginRight="160px"/> />
+        android:layout_gravity="center_horizontal|bottom"
+        android:src="@drawable/ic_submit"
+        app:backgroundTint="#D33F6B"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        app:rippleColor="#33728dff" />
 
-
-    <ImageView
-        android:layout_width="240px"
-        android:layout_height="240px"
-        android:src="@mipmap/submit"
-        android:layout_gravity="center"
-        android:layout_marginTop="48px"/>
 </LinearLayout>
