--- a/app/src/main/res/layout/fragment1_zone.xml
+++ b/app/src/main/res/layout/fragment1_zone.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        android:layout_height="240px" />
+        android:layout_height="wrap_content" />
 
 
     <FrameLayout
