--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -46,7 +46,7 @@
     <ImageView
         android:layout_width="80px"
         android:layout_height="240px"
-        android:src="@mipmap/like"
+        android:src="@drawable/ic_unlike"
         android:layout_alignParentRight="true"
         android:layout_marginRight="40px"/>
 </RelativeLayout>
