--- a/app/src/main/res/layout/item_zone.xml
+++ b/app/src/main/res/layout/item_zone.xml
@@ -27,14 +27,12 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:id="@+id/rl_author"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/back">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/tv_author"
@@ -65,7 +63,8 @@
                     android:paddingBottom="8dp"
                     android:paddingLeft="16dp"
                     android:text="中午吃鱼吗？"
-                    android:textSize="18sp" />
+                    android:textColor="@color/colorAccent"
+                    android:textSize="22sp" />
 
             </LinearLayout>
 
@@ -85,26 +84,31 @@
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="#343434" />
-
         <RadioGroup
             android:id="@+id/rg_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/rb_option1"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:text="吃" />
+                android:layout_weight="1"
+                android:padding="16dp"
+                android:text="吃"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
             <RadioButton
                 android:id="@+id/rb_option2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:text="不吃" />
+                android:layout_weight="1"
+                android:padding="16dp"
+                android:text="不吃"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
         </RadioGroup>
     </LinearLayout>
