--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#4985d0</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#D0836D</color>
+    <color name="colorLight">@color/colorPrimary</color>
+    <color name="colorDark">#b2d4dc</color>
     <color name="et_focus_color">#b2d4dc</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
