1 修复了发布空问题（空标题、空选项）的问题 2 修复了关注状态显示异常问题，以及应该禁止关注自己

--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -50,7 +50,7 @@
             android:text="爱吃棉花糖的托尼"
             android:textSize="16sp" />
 
-        <com.example.aedvance.finalcoins.ui.view.RippleButtonView
+        <Button
             android:id="@+id/btn_interest"
             android:layout_width="78dp"
             android:layout_height="36dp"
