--- a/app/src/main/res/drawable/btn_followed_selector.xml
+++ b/app/src/main/res/drawable/btn_followed_selector.xml
@@ -12,16 +12,16 @@
 
     <item android:state_focused="true">
         <shape>
-            <gradient android:angle="180" android:endColor="@color/et_focus_color" android:startColor="@color/et_focus_color" />
-            <stroke android:width="1dip" android:color="@color/et_focus_color" />
+            <gradient android:angle="180" android:endColor="@color/color_bbbbbb" android:startColor="@color/color_bbbbbb" />
+            <stroke android:width="1dip" android:color="@color/color_bbbbbb" />
             <corners android:radius="1dp" />
             <padding android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp" />
         </shape>
     </item>
     <item  android:state_active="true">
         <shape>
-            <gradient android:angle="180" android:endColor="#FDFDFD" android:startColor="#FDFDFD" />
-            <stroke android:width="1dip" android:color="#FDFDFD" />
+            <gradient android:angle="180" android:endColor="@color/color_bbbbbb" android:startColor="@color/color_bbbbbb" />
+            <stroke android:width="1dip" android:color="@color/color_bbbbbb" />
             <corners android:radius="1dp" />
             <padding android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp" />
         </shape>
