--- a/app/src/main/res/layout/fragment2_mirror.xml
+++ b/app/src/main/res/layout/fragment2_mirror.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/btn_mirror"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="320px"
